--- a/appsettings.json
+++ b/appsettings.json
@@ -2,6 +2,7 @@
  "BotApiKey": "BotApiKey",
  "TelegramChat": "TelegramChat",
  "YaDiskToken": "YaDiskToken",
+ "YaDiskCatalog": "YaDiskCatalog",
  "BackupCatalog": [
      "Catalog1",
      "Catalog2",
